refactor: remove tournament timestamps
