# app/Http/Resources/TournamentResource.php
@@ -8,21 +8,22 @@ use OpenApi\Attributes as OA;
 
 #[OA\Schema(
     schema: 'Tournament',
-    required: ['id', 'name', 'eloMultiplier', 'countryCode', 'region', 'rating'],
+    required: ['id', 'name', 'eloMultiplier', 'major', 'balancing'],
     properties: [
         new OA\Property(property: 'id', description: 'The ID of the tournament', type: 'integer', nullable: false),
         new OA\Property(property: 'name', description: 'The name of the tournament', type: 'string', nullable: false),
-        new OA\Property(property: 'eloMultiplier', description: 'The elo multiplier of the tournament', type: 'float', minimum: 0, nullable: false),
+        new OA\Property(property: 'eloMultiplier', description: 'The elo multiplier of the tournament', type: 'float',
+            minimum: 0, nullable: false),
         new OA\Property(property: 'major', description: 'Is the tournament a major tournament ?', type: 'bool',
-            default: false, example: false, nullable: false),
+            default: true, example: true, nullable: false),
+        new OA\Property(property: 'balancing', description: 'Is the tournament a balancing tournament', type: 'boolean',
+            default: false, nullable: false),
         new OA\Property(property: 'goldTeamId', ref: '#/components/schemas/Team',
             description: 'The winning team of the tournament', nullable: true),
         new OA\Property(property: 'silverTeamId', ref: '#/components/schemas/Team',
             description: 'The second team of the tournament', nullable: true),
         new OA\Property(property: 'bronzeTeamId', ref: '#/components/schemas/Team',
             description: 'The third team of the tournament', nullable: true),
-        new OA\Property(property: 'startsAt', description: 'The starting date of the tournament', type: 'string', format: 'date', nullable: false),
-        new OA\Property(property: 'endsAt', description: 'The ending date of the tournament', type: 'string', format: 'date', nullable: true),
     ]
 )]
 class TournamentResource extends JsonResource
@@ -37,14 +38,12 @@ class TournamentResource extends JsonResource
         return [
             'id' => $this->id,
             'name' => $this->name,
-            'eloMultiplier' => $this->elo_multiplier,
+            'eloMultiplier' => (float) $this->elo_multiplier,
             'major' => $this->major,
             'balancing' => $this->balancing,
             'goldTeam' => new TeamResource($this->whenLoaded('goldTeam')),
             'silverTeam' => new TeamResource($this->whenLoaded('silverTeam')),
             'bronzeTeam' => new TeamResource($this->whenLoaded('bronzeTeam')),
-            'startsAt' => $this->starts_at,
-            'endsAt' => $this->ends_at,
         ];
     }
 }
